# ick_training

./: CMakeLists.txt  CMakelists.txt  LICENSE  README.md
chapter_0/: CMakeLists.txt
chapter_0/src/: main.cpp
chapter_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
chapter_1/chapter_0/: Makefile  chapter_0_executable  cmake_install.cmake
chapter_1/chapter_1/: Makefile  chapter_1_1_1  chapter_1_1_3  cmake_install.cmake
chapter_1/src/: main_1_1.cpp  main_1_3.cpp  main_1_4.cpp  main_1_5.cpp  main_1_5_1.cpp
chapter_2/: CMakeLists.txt
chapter_2/src/: main_2_1.cpp
