project(chapter_1)

# Executables
# For each executable file, you add a new executable form in CMake
###############################################################################

add_executable( ${PROJECT_NAME}_1_1
    src/main_1_1.cpp
)

add_executable( ${PROJECT_NAME}_1_3
    src/main_1_3.cpp
)

add_executable( ${PROJECT_NAME}_1_4
    src/main_1_4.cpp
)
